--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="c5">
             <p>I’m currently a student at <a href="https://www.pisd.edu/shepton" target="_blank" style="color: #B31B1B">Shepton High School</a>. I have a passion for design, technology, and leadership.<br><br>
 
-            Rasied in Texas, I have come to love the outdoors as much as I love technology. I've been to almost half of the National Parks in the US and have over 100 camping nights.<br><br>
+            Raised in Texas, I have come to love the outdoors as much as I love technology. I've been to almost half of the National Parks in the US and have over 100 camping nights.<br><br>
 
 
             Although I am CONSTANTLY running around , I'd love to chat! Shoot me an <a href="mailto:zameer@jiwani.me" target="_blank" style="color: #B31B1B">email</a> and we can work something out.
